# Stereo_SLAM

./: .gitignore  CMakeLists.txt  README.md  debug.txt
app/: run_kitti_stereo.cpp
config/: default.yaml
include/myslam/: ORBVocabulary.h  backend.h  feature.h  frame.h  frontend.h  g2o_types.h  loopclosing.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/: CMakeLists.txt  backend.cpp  frame.cpp  frontend.cpp  loopclosing.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
